k8s/k8s_manifest/blog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: neenopaltest/mokkup:blog-1.0
        ports:
        - containerPort: 8002
      imagePullSecrets:
      - name: reg-cred 
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: NodePort
