k8s/k8s_manifest/dashboard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: neenopaltest/mokkup:dashboard-1.0
        ports:
        - containerPort: 8001
      imagePullSecrets:
      - name: reg-cred 
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: NodePort
